# prometheus-flask-instrumentator

./: .flake8  .markdownlint.json  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-and-publish.yml  ci-development.yml  ci-production.yml  development-test.yml  production-test.yml  python-package.yml  release.yml  test-branches.yml
prometheus_flask_instrumentator/: __init__.py  flask_instrumentation.py  instrumentation.py
src/prometheus_flask_instrumentator/: __init__.py  flask_instrumentation.py
tests/: README.md  test_flask_instrumentation.py
