[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prometheus-flask-instrumentator"
version = "4.0.0"
description = "Instruments Flask API transparently"
authors = ["Tim Schwenke <tim.schwenke+trallnag@protonmail.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trallnag/prometheus-flask-instrumentator"
keywords = ["prometheus", "instrumentation", "flask", "monitoring", "metrics"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: System :: Monitoring',
    'Topic :: System :: Logging',
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1"
prometheus-client = "^0.8"

[tool.poetry.dev-dependencies]
pip = "^20.1.1"
flake8 = "^3.8"
black = "^19.10b0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
isort = "^5.2.2"

[tool.black]
line-length = 90
